--- a/index.html
+++ b/index.html
@@ -42,7 +42,21 @@
     <section class="contenedor">
         <div class="iconos">
             <div class="icono">
-                
+                <img src="img/icono-sonido.svg" alt="imagen sonico">
+                <h3>Gran Sonido</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono-garantia.svg" alt="imagen sonico">
+                <h3>Garantia de por vida</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
+            </div>
+
+            <div class="icono">
+                <img src="img/icono-bateria.svg" alt="imagen sonico">
+                <h3>+20 Hora de Bateria</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
             </div>
         </div>
     </section>
