--- a/index.html
+++ b/index.html
@@ -61,6 +61,15 @@
         </div>
     </section>
 
+    <section class="sobre-tech">
+        <div class="contenedor sobre-tech-grid">
+            <div class="texto-sobre-tech">
+                <h2>Sobre los <span>TechPRO</span></h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint autem unde quibusdam deleniti cum labore, nihil neque aliquam eligendi? Ipsam minus totam tenetur. Ab, magnam? Cum expedita illo aut a.</p>
+            </div>
+        </div>
+    </section>
+
 </body>
 
 </html>
