--- a/index.html
+++ b/index.html
@@ -91,6 +91,25 @@
         </div>
     </main>
 
+    <section class="newsletter">
+        <div class="contenido-newsletter contenedor">
+            <div class="texto-newsletter">
+                <h2>Recibe Actualizaciones</h2>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime animi provident aliquid facere numquam vero totam praesentium eligendi debitis, voluptate dolorum saepe autem porro suscipit voluptatibus amet architecto rem exercitationem?</p>
+                <form class="formulario" action="">
+                    <div class="input">
+                        <input type="email" name="email" id="email" placeholder="Tu Email">
+                    </div>
+                    <input type="submit" value="Incribirme">
+                </form>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>Todos los derechos reservados</p>
+    </footer>
+
 </body>
 
 </html>
