--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <picture>
                     <source sizes="1920w" srcset="img/header.avif 1920w" type="image/avif">
                     <source sizes="1920w" srcset="img/header.webp 1920w" type="image/webp">
-                    <source sizes="1920w" srcset="img/header.jpg 1920w" type="image/jpg">
-                    <img loading="lazy" decoding="async" src="img/header.jpg" alt="header" lazyalt="imagen" width="1000"
+                    <source sizes="1920w" srcset="img/header.png 1920w" type="image/jpg">
+                    <img loading="lazy" decoding="async" src="img/header.png" alt="header" lazyalt="imagen" width="1000"
                         height="600">
                 </picture>
             </div> <!-- .imagen-header -->
@@ -109,7 +109,7 @@
     <footer class="footer">
         <p>Todos los derechos reservados</p>
     </footer>
-
+    <script src="js/imagenes.js"></script>
 </body>
 
 </html>
