se cambia seteo de imagenes

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <div class="texto-header">
                 <p class="tagline-producto">Sonido Profesional</p>
                 <h1 class="nombre-producto degradado-verde">TechPRO</h1>
-                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia error alias doloribus dolorem reiciendis non minima. Molestiae expedita labore obcaecati natus aut id, sequi culpa provident ducimus tempora facilis officiis.</p>
+                <p class="descripcion-producto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia error
+                    alias doloribus dolorem reiciendis non minima. Molestiae expedita labore obcaecati natus aut id,
+                    sequi culpa provident ducimus tempora facilis officiis.</p>
                 <p class="precio-producto">Desde <span>$299</span></p>
             </div>
 
@@ -44,19 +46,25 @@
             <div class="icono">
                 <img src="img/icono-sonido.svg" alt="imagen sonico">
                 <h3>Gran Sonido</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt
+                    perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora
+                    explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
             </div>
 
             <div class="icono">
                 <img src="img/icono-garantia.svg" alt="imagen sonico">
                 <h3>Garantia de por vida</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt
+                    perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora
+                    explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
             </div>
 
             <div class="icono">
                 <img src="img/icono-bateria.svg" alt="imagen sonico">
                 <h3>+20 Hora de Bateria</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni, quidem consequatur nobis nesciunt
+                    perferendis quam porro corrupti voluptatum repudiandae iure! Voluptatem ea adipisci tempora
+                    explicabo veritatis minus ipsa corrupti? Dignissimos!</p>
             </div>
         </div>
     </section>
@@ -65,7 +73,9 @@
         <div class="contenedor sobre-tech-grid">
             <div class="texto-sobre-tech">
                 <h2>Sobre los <span>TechPRO</span></h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint autem unde quibusdam deleniti cum labore, nihil neque aliquam eligendi? Ipsam minus totam tenetur. Ab, magnam? Cum expedita illo aut a.</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sint autem unde quibusdam deleniti cum
+                    labore, nihil neque aliquam eligendi? Ipsam minus totam tenetur. Ab, magnam? Cum expedita illo aut
+                    a.</p>
             </div>
         </div>
     </section>
@@ -75,27 +85,38 @@
 
         <div class="listado-modelos">
             <div class="modelo modelo-x">
-                <h3>TechPRO X</h3>
-                <p class="precio">$299</p>
+                <div class="texto">
+                    <h3>TechPRO X</h3>
+                    <p class="precio">$299</p>
+                </div>
+                <img src="img/modelo-x.svg" alt="TechPRO X">
             </div>
 
             <div class="modelo modelo-y">
-                <h3>TechPRO Y</h3>
-                <p class="precio">$399</p>
+                <div class="texto">
+                    <h3>TechPRO Y</h3>
+                    <p class="precio">$399</p>
+                </div>
+                <img src="img/modelo-y.svg" alt="TechPRO Y">
             </div>
 
             <div class="modelo modelo-z">
-                <h3>TechPRO Z</h3>
-                <p class="precio">$499</p>
+                <div class="texto">
+                    <h3>TechPRO Z</h3>
+                    <p class="precio">$499</p>
+                </div>
+                <img src="img/modelo-z.svg" alt="TechPRO Z">
             </div>
-        </div>
     </main>
+
 
     <section class="newsletter">
         <div class="contenido-newsletter contenedor">
             <div class="texto-newsletter">
                 <h2>Recibe Actualizaciones</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime animi provident aliquid facere numquam vero totam praesentium eligendi debitis, voluptate dolorum saepe autem porro suscipit voluptatibus amet architecto rem exercitationem?</p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Maxime animi provident aliquid facere
+                    numquam vero totam praesentium eligendi debitis, voluptate dolorum saepe autem porro suscipit
+                    voluptatibus amet architecto rem exercitationem?</p>
                 <form class="formulario" action="">
                     <div class="input">
                         <input type="email" name="email" id="email" placeholder="Tu Email">
